[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/BebasNeue-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/cards/seperator grun.png" type="Texture" id=3]
[ext_resource path="res://assets/cards/mana.png" type="Texture" id=4]
[ext_resource path="res://assets/cards/textcardgrun.png" type="Texture" id=5]
[ext_resource path="res://assets/cards/randgrun.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 105, 179 )

[sub_resource type="DynamicFont" id=4]
size = 444
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="Card" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -3 )
scale = Vector2( 0.75, 1 )
shape = SubResource( 3 )

[node name="Filling" type="Sprite" parent="."]
position = Vector2( 0.999984, -1.99997 )
scale = Vector2( 0.403801, 0.878049 )
texture = ExtResource( 5 )

[node name="Edge" type="Sprite" parent="."]
position = Vector2( 1, -1 )
scale = Vector2( 0.396, 0.444162 )
texture = ExtResource( 6 )

[node name="Seperator" type="Sprite" parent="Edge"]
position = Vector2( 0.000286102, 15.76 )
scale = Vector2( 0.995705, 0.675434 )
texture = ExtResource( 3 )

[node name="CardImage" type="Sprite" parent="."]
position = Vector2( 4, -80 )
scale = Vector2( 0.218502, 0.218502 )

[node name="Mana" type="Sprite" parent="."]
position = Vector2( 98, -176 )
scale = Vector2( 0.107416, 0.107416 )
texture = ExtResource( 4 )

[node name="ManaCost" type="Label" parent="Mana"]
margin_left = -205.0
margin_top = -242.0
margin_right = 205.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDescription" type="Label" parent="."]
margin_left = -80.0
margin_top = 14.0
margin_right = 82.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
